deploy/dsl-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: days-synce-last
  labels: &LABELS
    app.kubernetes.io/name: days-synce-last
spec:
  replicas: 1
  selector:
    matchLabels: *LABELS
  template:
    metadata:
      labels: *LABELS
    spec:
      containers:
        - name: days-synce-last
          image: ghcr.io/thegor1lla/days-synce-last:0.0.1
          ports:
            - containerPort: 3000
              name: web
