deploy/dsl-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: days-synce-last
  labels: &LABELS
    app.kubernetes.io/name: days-synce-last
spec:
  selector: *LABELS
  ports:
    - protocol: TCP
      name: web
      port: 3000
      targetPort: 3000
