deploy/dsl-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: days-synce-last
  labels: &LABELS
    app.kubernetes.io/name: days-synce-last
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: internal
  rules:
    - host: days-synce-last.synyx.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: days-synce-last
                port:
                  name: web
  tls:
    - hosts:
        - days-synce-last.synyx.cloud
      secretName: days-synce-last-tls
